# roleman

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  readonly-probe.sh
.github/workflows/: ci.yml  pr.yml  release.yml
scripts/: generate-release-notes.sh
src/: aws_cli.rs  aws_config.rs  aws_sdk.rs  config.rs  credentials_cache.rs  error.rs  history.rs  lib.rs  main.rs  mock_server.rs  model.rs  roles_cache.rs  sso_cache.rs  test_support.rs  tui.rs  ui.rs
src/desktop/: detect.rs  linux.rs  macos.rs  mod.rs  permissions.rs  unsupported.rs  util.rs  windows.rs
src/provider/: mod.rs
src/provider/aws/: cli.rs  config.rs  mod.rs  sdk.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
tests/: e2e.rs
tests/common/: mod.rs
