[package]
name = "roleman"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sha1 = "0.10"
aws-config = "1"
aws-sdk-sso = "1"
aws-sdk-ssooidc = "1"
aws-types = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
open = "5"
urlencoding = "2"
indicatif = "0.17"
owo-colors = "4"

[dev-dependencies]
tempfile = "3"

[workspace.metadata.dist]
cargo-dist-version = "0.24.1"
ci = "github"
installers = ["shell", "homebrew"]
tap = "fiam/homebrew-roleman"
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin"]

[workspace.metadata.release]
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
